[package]
name = "ip-tcp"
version = "0.1.0"
authors = ["Kartik Singhal <kartiksinghal@gmail.com>", "Sumukha TV <tvsumukha@gmail.com>"]
build = "build.rs"

[build-dependencies]
syntex = "0.42.*"
pnet_macros = "*"

[dependencies]
crossbeam = "*"
log = "*"
pnet = "*"
pnet_macros_support = "*"
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger" }
rand = "*"
rustyline = "1.0.0"

[dependencies.clap]
version = "*"
default-features = false

[[bin]]
name = "node"
path = "src/main.rs"
